--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <script src="game.js"></script>
+    <script src="game.cpp"></script>
 </body>
 </html>
